Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@ label:active:after {
 
 .prez >*{
     padding: 0 4rem;
+    line-height: 28px;
 }
 
 .prez p{
